--- a/index.html
+++ b/index.html
@@ -19,6 +19,10 @@
   <div class="container">
     <div class="canvas-container">
       <canvas id="canvas"></canvas>
+      <div id="imageControls">
+        <button id="prev-button">Prev</button>
+        <button id="next-button">Next</button>
+      </div>
       <div id="controls">
         <div id="annotation-container">
           <div id="annotation-title">Annotations</div>
